--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -25,6 +25,7 @@
     <script src="app/app.core.modules.js"></script>
     <script src="app/app.core.run.js"></script>
     <script src="app/app.core.routes.js"></script>
+    <script src="app/app.core.constants.js"></script>
 
     <!-- Login -->
     <script src="app/login/login.js"></script>
