--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -25,6 +25,7 @@
     <script src="app/app.core.modules.js"></script>
     <script src="app/app.core.run.js"></script>
     <script src="app/app.core.routes.js"></script>
+    <script src="app/app.core.constants.js"></script>
 
     <!-- Login -->
     <script src="app/login/login.js"></script>
@@ -47,14 +48,12 @@
     <!-- Mocks -->    
     <script src="common/mocks/common.mocks.dependencies.js"></script>
     <script src="common/mocks/tipo-documento-resource.mock.js"></script>
+    <script src="common/mocks/tipo-entidad-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
     <script src="common/services/tipo-documento-resource.service.js"></script>
-
-    <!-- Controllers -->
-    
-    <!-- Services -->
+    <script src="common/services/tipo-entidad-resource.service.js"></script>
 
 </head>
 <body>
