servicio y mocks de tipo-anotacion, y añadir los servicios al controllador documento, listo

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -39,21 +39,27 @@
     <script src="app/administracion/tipo-documento/tipo-documento.controller.js"></script>    
     <script src="app/administracion/tipo-entidad/tipos-entidad.controller.js"></script>
     <script src="app/administracion/entidad/entidad.controller.js"></script>
+    <script src="app/administracion/tipo-anotacion/tipo-anotacion.controller.js"></script>
 
     <!-- Gestion Documntal -->
     <script src="app/gestion-documental/gestion-documental.js"></script>
     <script src="app/gestion-documental/gestion-documental.dependencies.js"></script>
     <script src="app/gestion-documental/gestion-documental.routes.js"></script>   
+    <script src="app/gestion-documental/documento/documento.controller.js"></script>
     
     <!-- Mocks -->    
     <script src="common/mocks/common.mocks.dependencies.js"></script>
     <script src="common/mocks/tipo-documento-resource.mock.js"></script>
     <script src="common/mocks/tipo-entidad-resource.mock.js"></script>
+    <script src="common/mocks/entidad-resource.mock.js"></script>
+    <script src="common/mocks/tipo-anotacion-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
     <script src="common/services/tipo-documento-resource.service.js"></script>
     <script src="common/services/tipo-entidad-resource.service.js"></script>
+    <script src="common/services/entidad-resource.service.js"></script>
+    <script src="common/services/tipo-anotacion-resource.service.js"></script>
 
 </head>
 <body>
