TipoDocumento todos los metodos funcionando

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -56,6 +56,7 @@
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
+    <script src="common/services/common.services.dependencies.js"></script>
     <script src="common/services/tipo-documento-resource.service.js"></script>
     <script src="common/services/tipo-entidad-resource.service.js"></script>
     <script src="common/services/entidad-resource.service.js"></script>
