--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -62,6 +62,7 @@
     <script src="common/services/tipo-entidad-resource.service.js"></script>
     <script src="common/services/entidad-resource.service.js"></script>
     <script src="common/services/tipo-anotacion-resource.service.js"></script>
+    <script src="common/services/documento-resource.service.js"></script>
 
     <!--Estilos-->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
