Path de Navegación listo

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -36,7 +36,8 @@
     <!-- Administration -->
     <script src="app/administracion/administracion.js"></script>
     <script src="app/administracion/administracion.dependencies.js"></script>
-    <script src="app/administracion/administracion.routes.js"></script>    
+    <script src="app/administracion/administracion.routes.js"></script>  
+    <script src="app/administracion/administracion.controller.js"></script>
     <script src="app/administracion/tipo-documento/tipo-documento.controller.js"></script>    
     <script src="app/administracion/tipo-entidad/tipos-entidad.controller.js"></script>
     <script src="app/administracion/entidad/entidad.controller.js"></script>
@@ -46,6 +47,7 @@
     <script src="app/gestion-documental/gestion-documental.js"></script>
     <script src="app/gestion-documental/gestion-documental.dependencies.js"></script>
     <script src="app/gestion-documental/gestion-documental.routes.js"></script>   
+    <script src="app/gestion-documental/gestion-documental.controller.js"></script>
     <script src="app/gestion-documental/documento/documento.controller.js"></script>
     
     <!-- Mocks -->    
