arreglar los formularios tipo entidad tipo documento

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -178,7 +178,7 @@
                     <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
                         <div class="deslizador">
                             <button class="btn_deslizable" onclick="document.getElementById('body_index').scrollTop = getPosition().y;"
-                                    ng-show="vm.$state.current.name == 'home' || (vm.$state.current.name != 'busqueda')">
+                                    ng-show="vm.$state.current.name == 'home'">
                                 <span class="ico-newspaper-o"></span>
                                 <p>Actualidad</p>
                             </button>
