cambios bugs en busqueda

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -218,7 +218,7 @@
         <div ui-view class="animatio ng-enter"></div>
     </div>    
 
-    <wlegem-news></wlegem-news>
+    <wlegem-news ng-show="vm.$state.current.name == 'home'"></wlegem-news>
     <wlegem-footer></wlegem-footer>
 </body>
 
