arreglar bug busqueda home

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="WebLegemApp" ng-controller="homeController as vm">
 <head>
-    <title>Web Legem</title>
+    <title>Legem</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -45,7 +45,7 @@
     <script src="app/busqueda/ver/ver-documento.controller.js"></script>
 
     <!-- Noticias -->
-    <script src="app/noticias/noticias.controller.js"></script>
+    <script src="app/principal/noticias.controller.js"></script>
 
     <!-- Administration -->
     <script src="app/administracion/administracion.js"></script>
