--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -33,6 +33,11 @@
     <script src="app/login/login.routes.js"></script>
     <script src="app/login/login.controller.js"></script>
 
+    <script src="app/busqueda/busqueda.js"></script>
+    <script src="app/busqueda/busqueda.depedencies.js"></script>
+    <script src="app/busqueda/busqueda.routes.js"></script>
+    <script src="app/busqueda/busqueda.controller.js"></script>
+
     <!-- Administration -->
     <script src="app/administracion/administracion.js"></script>
     <script src="app/administracion/administracion.dependencies.js"></script>
