--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -88,7 +88,7 @@
     <link href="css/plantillas/administracion.css" rel="stylesheet" />
     <link href="css/plantillas/login.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_entidad.css" rel="stylesheet" />
-
+    <link href="css/plantillas/busqueda.css" rel="stylesheet" />
 
     <link href="css/estilos_weblegem.css" rel="stylesheet" />
     <link href="css/noticias.css" rel="stylesheet" />
@@ -100,10 +100,12 @@
     <script src="app/homeController.js"></script>
     <script src="app/uploader-andres.js"></script>
     <script src="scripts/generales.js"></script>
-
+    <script src="scripts/busqueda.js"></script>
 
     <link href="css/pagina_principal.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
     <link href="css/pagina_principal_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
+    <script src="app/busqueda/busqueda_controller.js"></script>
+
 
 </head>
 
