--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -42,6 +42,8 @@
     <script src="app/administracion/administracion.js"></script>
     <script src="app/administracion/administracion.dependencies.js"></script>
     <script src="app/administracion/administracion.routes.js"></script>
+    <script src="app/administracion/administracion.controller.js"></script>
+
     <script src="app/administracion/tipo-documento/tipo-documento.controller.js"></script>
     <script src="app/administracion/tipo-entidad/tipos-entidad.controller.js"></script>
     <script src="app/administracion/entidad/entidad.controller.js"></script>
@@ -83,7 +85,7 @@
     <link href="css/elementos/imagen_inicial.css" rel="stylesheet" />
     <link href="css/elementos/gadget_control_entidad.css" rel="stylesheet" />
     <link href="css/elementos/uploader.css" rel="stylesheet" />
-
+    <link href="css/elementos/tabs.css" rel="stylesheet" />
 
     <link href="css/plantillas/informacion_documento.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_documento.css" rel="stylesheet" />
