cambios en los botones de inicio y funciones basicas

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -145,17 +145,17 @@
 
             <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
                 <div class="deslizador">
-                    <button class="btn_deslizable">
+                    <button class="btn_deslizable" ui-sref="busqueda">
                         <span class="ico-search"></span>
                         <p>Busqueda</p>
                     </button>
 
-                    <button class="btn_deslizable">
+                    <button class="btn_deslizable" ui-sref="home">
                         <span class="ico-home"></span>
                         <p>Inicio</p>
                     </button>
 
-                    <button class="btn_deslizable">
+                    <button class="btn_deslizable" ui-sref="login">
                         <span class="ico-sign-in"></span>
                         <p>Ingresar</p>
                     </button>
