no echo nada importante

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -105,7 +105,7 @@
     <link href="css/plantillas/tipo_entidad.css" rel="stylesheet" />
     <link href="css/plantillas/busqueda.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
     <link href="css/plantillas/busqueda_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
-
+    <link href="css/plantillas/gestion_documental.css" rel="stylesheet" />
  
     <!--Iconografia-->
     <link href="iconos-legem/styles.css" rel="stylesheet" />
