--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -125,81 +125,79 @@
     <link href="fuentes/Hotel Coral Essex/fonts.css" rel="stylesheet" />
 </head>
 
-<body id="body_index" style="position:relative;min-height: 100%; font-size:100%;">
+<body id="body_index">
 
-    <div>
-        <div class="header">
-            <!--
-            <div class="figura_logo">
-            </div>-->
-
-
-            <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
-                <div class="deslizador">
-                    <button class="btn_deslizable" ui-sref="busqueda">
-                        <span class="ico-search"></span>
-                        <p>Busqueda</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="home">
-                        <span class="ico-home"></span>
-                        <p>Inicio</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="login">
-                        <span class="ico-sign-in"></span>
-                        <p>Ingresar</p>
-                    </button>
-
-                    <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
-                        <span class="ico-angle-left"></span>
-                        <span class="ico-child"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
-                        <span class="{{vm.icono_contraste}}"></span>
-                    </button>
-                    <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
-                        <span class="ico2-earth"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
-                        <span class="ico2-font-size"></span>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="header2 ">
+    <div class="header">
+        <div class="figura_logo">
+            <svg viewBox="0 0 1000 1000" preserveAspectRatio="none" width="100%" height="100%">
+                <defs>
+                    <defs>
+                        <radialGradient id="rgrad" cx="50%" cy="50%" r="75%">
+                            <stop offset="0%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                            <stop offset="16%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:rgb(7,48,33);stop-opacity:1" />
+                        </radialGradient>
+                    </defs>
+                </defs>
+                <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
+            </svg>
             <div class="contenedor_nombre_escudo">
                 <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
-                <p class="nombre_pagina">Legem</p>
-            </div>
-
-            <div class="hijo_right_header2">                
-                <div id="contenedor_mini_search" class="contenedor_mini_search">
-                    <form class="mini_search">
-                        <input id="mini_search" type="text" placeholder="Buscar" onfocus="atenuar_busqueda(this.id)" />
-                        <span class="ico-search"></span>
-                    </form>
-                </div>
-
-                <div class="navegacion">
-                    <ul class="bar_nav">                        
-                        <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
-                            <a ui-sref="{{opcion.estado}}">
-                                {{ opcion.texto }}                                
-                            </a>
-                            <ul ng-if="opcion.subEstados">                                
-                                <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>                                
-                            </ul>                            
-                        <li>                            
-                    </ul>                    
-                </div>
-                
             </div>
         </div>
+
+        <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
+            <div class="deslizador">
+                <button class="btn_deslizable" ui-sref="busqueda">
+                    <span class="ico-search"></span>
+                    <p>Busqueda</p>
+                </button>
+
+                <button class="btn_deslizable" ui-sref="home">
+                    <span class="ico-home"></span>
+                    <p>Inicio</p>
+                </button>
+
+                <button class="btn_deslizable" ui-sref="login">
+                    <span class="ico-sign-in"></span>
+                    <p>Ingresar</p>
+                </button>
+
+                <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
+                    <span class="ico-angle-left"></span>
+                    <span class="ico-child"></span>
+                </button>
+                <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
+                    <span class="{{vm.icono_contraste}}"></span>
+                </button>
+                <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
+                    <span class="ico2-earth"></span>
+                </button>
+                <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
+                    <span class="ico2-font-size"></span>
+                </button>
+            </div>
+        </div>
+
+        <!--<div class="header2 ">
+                <div class="navegacion">
+                    <ul class="bar_nav">
+                        <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
+                            <a ui-sref="{{opcion.estado}}">
+                                {{ opcion.texto }}
+                            </a>
+                            <ul ng-if="opcion.subEstados">
+                                <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
+                            </ul>
+                        <li>
+                    </ul>
+                </div>
+        </div>-->
     </div>
 
-    <div ui-view class="vistas animatio ng-enter"></div>
+    <div ui-view class="animatio ng-enter"></div>
+
+
     <!--
     <footer id="theme-footer">
         <div id="footer-widget-area" class="footer-3c">
