--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -179,20 +179,21 @@
             </div>
         </div>
 
-        <!--<div class="header2 ">
-                <div class="navegacion">
-                    <ul class="bar_nav">
-                        <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
-                            <a ui-sref="{{opcion.estado}}">
-                                {{ opcion.texto }}
-                            </a>
-                            <ul ng-if="opcion.subEstados">
-                                <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
-                            </ul>
-                        <li>
+        
+    </div>
+    <div class="header2">
+        <div class="navegacion">
+            <ul class="bar_nav">
+                <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
+                    <a ui-sref="{{opcion.estado}}">
+                        {{ opcion.texto }}
+                    </a>
+                    <ul ng-if="opcion.subEstados">
+                        <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
                     </ul>
-                </div>
-        </div>-->
+                <li>
+            </ul>
+        </div>
     </div>
 
     <div ui-view class="animatio ng-enter"></div>
