--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -131,6 +131,8 @@
     <link href="fuentes/Hotel Coral Essex/fonts.css" rel="stylesheet" />
     <link href="fuentes/open-sans-regular/sample.css" rel="stylesheet" />
     <link href="fuentes/open-sans-bold/sample.css" rel="stylesheet" />
+    <link href="fuentes/abril-fatface/sample.css" rel="stylesheet" />
+    <link href="fuentes/frederica/sample.css" rel="stylesheet" />
 
     <link href="css/plantillas/footer.css" rel="stylesheet" />
     <link href="css/plantillas/news.css" rel="stylesheet" />
@@ -142,83 +144,87 @@
 <body id="body_index">
     <div style=" width:100%; min-height:100vh;">
 
-        <div class="header">
-            <div class="figura_logo" ng-show="vm.$state.current.name == 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
-                <svg viewBox="0 0 1000 1000" preserveAspectRatio="none" width="100%" height="100%">
+    <div class="header">
+        <div class="figura_logo" ng-show="vm.$state.current.name == 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
+            <svg viewBox="0 0 1000 1000" preserveAspectRatio="none" width="100%" height="100%">
+                <defs>
                     <defs>
-                        <defs>
-                            <radialGradient id="rgrad" cx="50%" cy="50%" r="75%">
-                                <stop offset="0%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
-                                <stop offset="16%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:rgb(7,48,33);stop-opacity:1" />
-                            </radialGradient>
-                        </defs>
+                        <radialGradient id="rgrad" cx="50%" cy="50%" r="75%">
+                            <stop offset="0%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                            <stop offset="16%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:rgb(7,48,33);stop-opacity:1" />
+                        </radialGradient>
                     </defs>
-                    <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
-                </svg>
-                <div class="contenedor_nombre_escudo">
-                    <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
-                </div>
-            </div>
-
-            <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
-                <div class="deslizador">
-                    <button class="btn_deslizable" ui-sref="busqueda">
-                        <span class="ico-search"></span>
-                        <p>Busqueda</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="home">
-                        <span class="ico-home"></span>
-                        <p>Inicio</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="login" ng-show="!vm.loggeado">
-                        <span class="ico-sign-in"></span>
-                        <p>Ingresar</p>
-                    </button>
-
-                    <button class="btn_deslizable" ng-click="vm.LogOut()" ng-show="vm.loggeado">
-                        <span class="ico-sign-in"></span>
-                        <p>Salir</p>
-                    </button>
-
-                    <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
-                        <span class="ico-angle-left"></span>
-                        <span class="ico-child"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
-                        <span class="{{vm.icono_contraste}}"></span>
-                    </button>
-                    <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
-                        <span class="ico2-earth"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
-                        <span class="ico2-font-size"></span>
-                    </button>
-                </div>
-            </div>        
-        </div>
-
-        <div class="header2" ng-show="vm.loggeado">
-            <div class="navegacion">
-                <ul class="bar_nav">
-                    <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
-                        <a ui-sref="{{opcion.estado}}">
-                            {{ opcion.texto }}
-                        </a>
-                        <ul ng-if="opcion.subEstados">
-                            <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
-                        </ul>
-                    <li>
-                </ul>
+                </defs>
+                <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
+            </svg>
+            <div class="contenedor_nombre_escudo">
+                <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
             </div>
         </div>
 
-        <div ui-view class="animatio ng-enter"></div>
-    </div>    
+        <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
+            <div class="deslizador">
+                <button class="btn_deslizable" ui-sref="busqueda">
+                    <span class="ico-search"></span>
+                    <p>Busqueda</p>
+                </button>
+
+                <button class="btn_deslizable" ui-sref="home">
+                    <span class="ico-home"></span>
+                    <p>Inicio</p>
+                </button>
+
+                <button class="btn_deslizable" ui-sref="login" ng-show="!vm.loggeado">
+                    <span class="ico-sign-in"></span>
+                    <p>Ingresar</p>
+                </button>
+
+                <button class="btn_deslizable" ng-click="vm.LogOut()" ng-show="vm.loggeado">
+                    <span class="ico-sign-in"></span>
+                    <p>Salir</p>
+                </button>
+
+                <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
+                    <span class="ico-angle-left"></span>
+                    <span class="ico-child"></span>
+                </button>
+                <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
+                    <span class="{{vm.icono_contraste}}"></span>
+                </button>
+                <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
+                    <span class="ico2-earth"></span>
+                </button>
+                <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
+                    <span class="ico2-font-size"></span>
+                </button>
+            </div>
+        </div>
+
+        
+    </div>
+    <div class="header2" ng-show="vm.loggeado">
+        <div class="navegacion">
+            <ul class="bar_nav">
+                <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
+                    <a ui-sref="{{opcion.estado}}">
+                        {{ opcion.texto }}
+                    </a>
+                    <ul ng-if="opcion.subEstados">
+                        <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
+                    </ul>
+                <li>
+            </ul>
+        </div>
+    </div>
+
+    <div ui-view class="animatio ng-enter"></div>
+
+    </div>
+
 
     <wlegem-news></wlegem-news>
+
     <wlegem-footer></wlegem-footer>
 </body>
 
