--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -2,12 +2,15 @@
 
     <div class="titulo_news">
 
-        <img src="recursos/header/escudo_negro.png" />
+        <!--<img src="recursos/header/escudo_negro.png" />-->
         <div>
-            <h4>Universidad de Nariño</h4>
-            <h5>Noticias</h5>
+            <p>Actualidad Documental</p>
+            <p style="font-size:25px;">Universidad de nariño</p>
         </div>
-        <div class="forma_institucional">
+
+        
+    </div>
+       <!-- <div class="forma_institucional">
             <svg viewBox="0 0 1000 500" preserveAspectRatio="none" width="100%" height="100%">
                 <polygon points="0,500 500,0 1000,0 1000,500 0,500" fill="#076633"></polygon>
                 <polygon points="750,500 899,300 1000,500 650,500" fill="#F8EA1B"></polygon>
@@ -22,12 +25,22 @@
                     Una expresión de atonomía
                 </text>
             </svg>
-        </div>
-    </div>
+        </div>-->
+
     <div class="container_news">
-
+        <div style="align-self:center;">
+            <select class="select a_input" style="width:400px;">
+                <option value="-1" selected>Choose an animal</option>
+                <option value="1" class="icon-monkey">Monkey</option>
+                <option value="2" class="icon-bear">Bear</option>
+                <option value="3" class="icon-squirrel">Squirrel</option>
+                <option value="4" class="icon-elephant">Elephant</option>
+            </select>
+            <span class="span_select  ico-angle-down"></span>
+            <button class="btn_sin_ico">ver todos</button>
+        </div>
         <div class="news_left">
-
+            
             <div class="tarjeta_news">
                 <div class="titulo_tarjeta">Acuerdo 25 del 2014</div><hr />
                 <div class="contenido_tarjeta">
@@ -138,7 +151,7 @@
             </div>
 
         </div>
-        <div class="news_right">
+       <!-- <div class="news_right">
             <div class="mini_tarjeta">
                 <p class="mt_title">Resolucion No 123A8</p>
                 <p class="mt_content">por medio del cual se modifica el estatuto general con 2 dias de sancion </p>
@@ -199,10 +212,7 @@
                 <p class="mt_date">21 de enero de 2015</p>
                 <hr class="mt_div" />
             </div>
-        </div>
-
-
-
+        </div>-->
 
 
     </div>
