--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -91,17 +91,14 @@
     <link href="css/elementos/tabs.css" rel="stylesheet" />
     <link href="css/plantillas/informacion_documento.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_documento.css" rel="stylesheet" />
-    <link href="css/noticias.css" rel="stylesheet" />
+    <link href="css/principal.css" rel="stylesheet" />
     <link href="css/plantillas/header2.css" rel="stylesheet" />
     <link href="css/plantillas/header.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/plantillas/header_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />    
     <link href="css/plantillas/accesibilidad.css" rel="stylesheet" />
     <link href="css/plantillas/administracion.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/plantillas/administracion_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
     <link href="css/plantillas/login.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_entidad.css" rel="stylesheet" />
     <link href="css/plantillas/busqueda.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/plantillas/busqueda_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
     <link href="css/plantillas/gestion_documental.css" rel="stylesheet" />
     <link href="../bower_components/quill/dist/quill.snow.css" rel="stylesheet" />
  
@@ -115,14 +112,9 @@
     <script src="scripts/busqueda.js"></script>
 
     <link href="css/pagina_principal.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/pagina_principal_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
-
     <link href="css/elementos/button.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/elementos/button_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
-
     <link href="css/estilos_weblegem.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/estilos_weblegem_contraste.css" rel="stylesheet" ng-if="vm.val_contraste==1" />
-
+    
     <script src="app/busqueda/busqueda_controller.js"></script>
 
     <!----Fuentes-Tipografia-->
@@ -133,12 +125,18 @@
     <link href="fuentes/open-sans-bold/sample.css" rel="stylesheet" />
     <link href="fuentes/abril-fatface/sample.css" rel="stylesheet" />
     <link href="fuentes/frederica/sample.css" rel="stylesheet" />
+    <link href="fuentes/lato/sample.css" rel="stylesheet" />
+    <link href="fuentes/lato-regular/sample.css" rel="stylesheet" />
 
     <link href="css/plantillas/footer.css" rel="stylesheet" />
     <link href="css/plantillas/news.css" rel="stylesheet" />
     <!--directivas-->
     <script src="common/directives/footer/wlegem-footer.directive.js"></script>
     <script src="common/directives/noticias/wlegem-news.directive.js"></script>
+    <link href="scripts/style4.css" rel="stylesheet" />
+    <!--Animacion dropdown-->
+    <script src="scripts/jquery.dropdown.js"></script>
+    <script src="scripts/modernizr.custom.63321.js"></script>
 </head>
 
 <body id="body_index">
